--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -24,3 +24,5 @@ jobs:
             git pull origin main
             pkill -f "python3.*app.py" || true
             nohup python app.py > app.log 2>&1 &
+            disown
+            exit 0
