--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -23,6 +23,6 @@ jobs:
             cd /home/ubuntu/server-for-cloud-labs
             git pull origin main
             pkill -f "python3.*app.py" || true
-            nohup python app.py > app.log 2>&1 &
+            nohup python3 app.py > app.log 2>&1 &
             disown
             exit 0
