--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -23,3 +23,5 @@ jobs:
             cd /home/ubuntu/server-for-cloud-labs
             git pull origin main
             pkill -f "python3.*app.py" || true
+            nohup python3 app.py > app.log 2>&1 &
+            disown
