--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -23,4 +23,4 @@ jobs:
             cd /home/ubuntu/server-for-cloud-labs
             git pull origin main
             pkill -f "python3.*app.py" || true
-            nohup setsid python3 app.py > app.log 2>&1 &
+            echo "Update code"
