--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -22,7 +22,7 @@ jobs:
           script: |
             cd /home/ubuntu/server-for-cloud-labs
             git pull origin main
-            pkill -f "python3.*app.py" || :
+            pkill -f "python3.*app.py" || true
             sleep 2
             nohup python3 app.py > app.log 2>&1 &
             disown
