--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -25,4 +25,4 @@ jobs:
             pkill -f "python3.*app.py" || true
             sleep 10
             nohup python3 app.py > app.log 2>&1 &
-            disown
+            exit 0
